styles/index.css
/* This file creates the basic graphics used by the worksheet
Feel free to look at it to pick up some tricks!
But you will not need to alter it to complete the problems on the worksheet
*/

body {
    background: rgb(0,212,255);
    background: linear-gradient(90deg, rgba(0,212,255,1) 0%, rgba(34,118,139,1) 50%, rgba(0,212,255,1) 100%);
}

section {
    margin-bottom: 250px;
}

header{
    font-size: 70px;
    font-weight: 700;
}

h3 {
    font-size: 30px;
    font-weight: 500;
}

/* Do not alter this class */
.field {
    width: 500px;
    height: 400px;
    border: 1px solid black;
    background-color: forestgreen;
    padding: 20px;
    margin-left: auto;
    margin-right: auto;
}

/* Do not alter this class */
.football {
    width: 100px;
    height: 100px;
    border: 1px solid black;
    background-color: saddlebrown;
    border-radius: 80px 8px;
    transform: rotate(-45deg);
    display:flex;
    align-items: center;
    justify-content: center;
    flex-shrink: 0;
}

/* Do not alter this class */
.stitching {
    transform: rotate(-45deg);
    width:54px;
    color: white;
    font-size: large;
    text-decoration:line-through;
    text-decoration-thickness: 7px;
    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
}

/* Do not alter this class */
.nerf {
    background-color: blue;
}

.header-text{
    color: aliceblue;
}

.section-text{
    font-size: 45px;
    font-weight: 500;
}

.text{
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    text-align: center;
    color: aliceblue;
}

.flex-container{
    display: flex;
    flex-direction: row;
    margin-bottom: 50px;
}

.intro-box{
    font-size: larger;
    margin-left: 20%;
    margin-right: 20%;
    padding: 5px;
    background: linear-gradient(to left, #22568b 0%, #8b228b 100%);
    background-clip: padding-box;
    padding: 1px 20px 1px 20px;
    border-radius: 8px;
}

.bottom-space{
    margin-bottom: 250px;
}

.flex-left {
    width:50%;
    margin: 5px;

}
  
.flex-right {
    width: 50%;
    margin: 5px;

}

img {
    display: block;
    margin-left: auto;
    margin-right: auto;
    border: 1px solid black;
}

.no-border{
    border: none;
    margin-bottom: -75px;
}

.answer{
    color:aqua
}

